feat: index elements

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV Denis TAVERNIER</title>
   <link rel="stylesheet" href="style.css">
+  <!-- <script type="module" src="build/index.js"></script> -->
 </head>
 
 <body>
+  <button type="button" onclick="" id="pdf">PDF</button>
   <header>
     <h1>Denis TAVERNIER</h1>
     <h3>Développeur Web Full <h3>
